Refine Docs, Refactor backend code
